fix: gap and add spacing right

--- a/app/components/pages/home/genre/Genre.module.scss
+++ b/app/components/pages/home/genre/Genre.module.scss
@@ -1,5 +1,6 @@
 .list {
-	@apply inline-flex gap-1.5 overflow-x-scroll scrollbar-hide;
+	@apply inline-flex gap-4 overflow-x-scroll scrollbar-hide v-gap-components;
 	margin-right: -2rem;
+	padding-right: 2rem;
 	width: calc(100% + 2rem);
 }
